hw9 done